--- a/VRChat/93/1266093.html
+++ b/VRChat/93/1266093.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "g6sMHnGzc1+Ax7Ha79QTbP0qLxBncPu27V+/sRtYAY4="></script>
+    "oIStPunYLNU8jBTWrN0H4zgr9yLD2A3fDNAEJlT+mUs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サイバネ義手「Liberator RLA-02」【VRC想定】","description":"VRC想定機械義手　型番「RLA-01」を販売いたします！","url":"https://booth.pm/ja/items/1266093","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"700","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/1b1a42d9-d78b-40e1-821f-cf3ab20d0f73/i/1266093/26d8faa8-279d-4bbc-a8dd-ae9a99deeeed_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="g6sMHnGzc1+Ax7Ha79QTbP0qLxBncPu27V+/sRtYAY4="></script>
+    nonce="oIStPunYLNU8jBTWrN0H4zgr9yLD2A3fDNAEJlT+mUs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -547,9 +547,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
