--- a/VRChat/04/1265604.html
+++ b/VRChat/04/1265604.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZdwZzehbCvPnimouEiES3tigtHPPH11beb6L2gYF0LU="></script>
+    "vR5QdIt4jwD3Es5eBPuqj+3RqJYLb4XCzbR0fANhlT8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"King_Schnapsen(キング・シュナプセン)","description":"VRC向け3Dアバターです\n\nシェーダーはユニティちゃんトゥーンシェーダー2.06を同梱しています\n\nアバター本体:フルトラッキング動作確認済み・アイトラッキング非対応\n\n\n利用規約\n　・著作権は作者である美羽_C.フレール（@MFreru）が保有しています。\n\n　・以下のような使用を禁止致します。\n　　×公序良俗に反する利用\n　　×政治的・宗教的主張に関する利用\n　　×再配布・再販売\n　　×自作発言等\n\n　・テクスチャ改変、モデル改変・営利利用可能です。\n\n・本規約は予告なく変更される場合があります。その際は最新のものが適用されます。\n\n　・本モデルデータ、および改変したモデルを使用したことにより発生したトラブルや損失に関して、作者とその関係者、およびその所属するいかなる団体も、一切の責任を負わないものとします。\n\n質問・不明な点がありましたら下記の連絡先にご連絡ください\n\nTwitter:@MFreru\nEmail:miufreru@gmail.com","url":"https://booth.pm/ja/items/1265604","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/bba5e0f7-99ce-4f4d-8fb1-16f4d8e54eea/i/1265604/9b697b8a-68b1-4bc4-a809-62fd2f647b3c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZdwZzehbCvPnimouEiES3tigtHPPH11beb6L2gYF0LU="></script>
+    nonce="vR5QdIt4jwD3Es5eBPuqj+3RqJYLb4XCzbR0fANhlT8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -455,9 +455,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
