--- a/VRChat/73/1265373.html
+++ b/VRChat/73/1265373.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/dpFwr8vY4/oNb8vTZ+/9rcpxqRfHLN+Ptlb/E/8r3U="></script>
+    "o5Z5kWnVD4A+XXoxh3NlOq04R2udbe+HbtN8XDRFdU0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoidテクスチャ　3着セット","description":"ワンピーステクスチャ用です。\n和風的な服\n黒ワンピース的な服\nセーターとコート\nの三点詰め込みセットです。\n\n【内容物】\nテクスチャ\nとりあえずの利用規約\n【簡易規約】\n・データ改変→可\n・商用利用→可\n・改変したものを再配布→可\n・改変していない再配布→不可※\n(ただし動画配信、VRChatアバタ―での使用など、テクスチャとして利用できない状態でのアップロードは大丈夫です。)","url":"https://booth.pm/ja/items/1265373","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/832fe23e-6abb-4cdc-9ac5-102b9173c10f/i/1265373/a163ed79-e3d7-4cc5-86da-902f8b470a07_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/dpFwr8vY4/oNb8vTZ+/9rcpxqRfHLN+Ptlb/E/8r3U="></script>
+    nonce="o5Z5kWnVD4A+XXoxh3NlOq04R2udbe+HbtN8XDRFdU0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -430,9 +430,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
